--- a/themes/pjda/layouts/index.html
+++ b/themes/pjda/layouts/index.html
@@ -1,6 +1,11 @@
 {{ partial "header.html" . }}
 
-<h1 class="entry-title"><br/>Pousada <i>Jardim dos Anjos</i><br/><br/></h1>
+<article class="post-8 page type-page status-publish hentry">
+	<header class="entry-header">
+		<h1 class="entry-title"><br/>Pousada <i>Jardim dos Anjos</i><br/><br/></h1>
+	</header><!-- .entry-header -->
+	<div class="entry-content">
+
 
 <p><a href="http://goo.gl/maps/i1L2U"><span class="domInacio">Uma caminhada de 8 minutos de La Casa de Dom Inácio</span></a></p>
 
@@ -33,6 +38,10 @@
 <p>&nbsp;</p>
 
 <!-- meta slider -->
+
+
+	</div>
+</article>
 
 {{ partial "footer.html" . }}
 
