--- a/themes/pjda/layouts/partials/footer.html
+++ b/themes/pjda/layouts/partials/footer.html
@@ -4,19 +4,7 @@
 
 		</div><!-- #main -->
 		<footer id="colophon" class="site-footer" role="contentinfo">
-
-<div class="googleads">
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- speedreadinggames.com -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-5638118185206577"
-     data-ad-slot="2998408037"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
-
+{{ partial "googleads.html" . }}
 			<div class="site-info">
 				<p>Webmaster: <a href="mailto:nicolas.jeanmonod@bluewin.ch">Nicolas Jeanmonod</a></p>
 				<!--  -->
