--- a/themes/pjda/layouts/partials/header.html
+++ b/themes/pjda/layouts/partials/header.html
@@ -13,7 +13,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width" />
 	<title>Pousada Jardim dos Anjos</title>
-	<link rel="shortcut icon" href="favicon.ico" />
+	<!-- <link rel="shortcut icon" href="favicon.ico" /> -->
 	<meta name="keywords" content="Abadiania, Casa de Dom Inacio, John of God, João de Deus, pousada" />
 	<meta name="description" content="We welcome you to Pousada Jardim dos Anjos in Abadiania, Goias, Brazil, a comfortable place of stay when you come to see John of God" />
 	<link href='http://fonts.googleapis.com/css?family=Quintessential' rel='stylesheet' type='text/css' />
@@ -36,23 +36,23 @@ img.emoji {
 }
 </style>
 <link rel='stylesheet' id='twentythirteen-fonts-css'  href='https://fonts.googleapis.com/css?family=Source+Sans+Pro%3A300%2C400%2C700%2C300italic%2C400italic%2C700italic%7CBitter%3A400%2C700&#038;subset=latin%2Clatin-ext' type='text/css' media='all' />
-<link rel='stylesheet' id='genericons-css'  href='http://pousadajardimdosanjos.com/wp-content/themes/twentythirteen/genericons/genericons.css?ver=3.03' type='text/css' media='all' />
+<link rel='stylesheet' id='genericons-css'  href='/css/genericons.css' type='text/css' media='all' />
 <link rel='stylesheet' id='twentythirteen-style-css'  href='/css/style.css' type='text/css' media='all' />
-<link rel='stylesheet' id='background-manager-pub-css'  href='http://pousadajardimdosanjos.com/wp-content/plugins/background-manager/resources/css/pub.css?ver=1.2.5.2' type='text/css' media='all' />
+<link rel='stylesheet' id='background-manager-pub-css'  href='/css/pub.css' type='text/css' media='all' />
 <script type="text/javascript">/* <![CDATA[ */window.background_manager_ajax={"url":"http:\/\/pousadajardimdosanjos.com\/wp-admin\/admin-ajax.php","action":"background-manager"};/* ]]> */</script>
-<script type='text/javascript' src='http://pousadajardimdosanjos.com/wp-includes/js/jquery/jquery.js?ver=1.11.3'></script>
-<script type='text/javascript' src='http://pousadajardimdosanjos.com/wp-includes/js/jquery/jquery-migrate.min.js?ver=1.2.1'></script>
+<script type='text/javascript' src='/js/jquery-1.11.3.min.js'></script>
+<script type='text/javascript' src='/js/jquery-migrate.min.js'></script>
 <script type='text/javascript'>
 /* <![CDATA[ */
-var myatu_bgm = {"current_background":{"id":30,"url":"http:\/\/pousadajardimdosanjos.com\/wp-content\/uploads\/2014\/01\/logo_pousada_landscape.jpg","alt":"","desc":"","caption":"logo_pousada_landscape","link":"","thumb":"http:\/\/pousadajardimdosanjos.com\/wp-content\/uploads\/2014\/01\/logo_pousada_landscape-150x150.jpg","bg_link":"","transition":"crossfade","transition_speed":0},"change_freq":"0","active_gallery":"31","is_fullsize":"true","is_preview":"false","initial_ease_in":"true","info_tab_thumb":"true","bg_click_new_window":"true","bg_track_clicks":"false","bg_track_clicks_category":"Background Manager","display_on_mobile":"true","fs_center":"true"};
+var myatu_bgm = {"current_background":{"id":30,"url":"\/img\/logo_pousada_landscape.jpg","alt":"","desc":"","caption":"logo_pousada_landscape","link":"","thumb":"\/img\/logo_pousada_landscape-150x150.jpg","bg_link":"","transition":"crossfade","transition_speed":0},"change_freq":"0","active_gallery":"31","is_fullsize":"true","is_preview":"false","initial_ease_in":"true","info_tab_thumb":"true","bg_click_new_window":"true","bg_track_clicks":"false","bg_track_clicks_category":"Background Manager","display_on_mobile":"true","fs_center":"true"};
 /* ]]> */
 </script>
-<script type='text/javascript' src='http://pousadajardimdosanjos.com/wp-content/plugins/background-manager/resources/js/functions.js?ver=1.2.5.2'></script>
-<script type='text/javascript' src='http://pousadajardimdosanjos.com/wp-content/plugins/background-manager/resources/js/flux.js?ver=1.2.5.2'></script>
-<script type='text/javascript' src='http://pousadajardimdosanjos.com/wp-content/plugins/background-manager/resources/js/pub.js?ver=1.2.5.2'></script>
-<link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://pousadajardimdosanjos.com/xmlrpc.php?rsd" />
-<link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://pousadajardimdosanjos.com/wp-includes/wlwmanifest.xml" />
-<meta name="generator" content="WordPress 4.3.2" />
+<script type='text/javascript' src='/js/functions.js'></script>
+<script type='text/javascript' src='/js/flux.js'></script>
+<script type='text/javascript' src='/js/pub.js'></script>
+<!-- <link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://pousadajardimdosanjos.com/xmlrpc.php?rsd" /> -->
+<!-- <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://pousadajardimdosanjos.com/wp-includes/wlwmanifest.xml" /> -->
+<meta name="generator" content="Hugo" />
 <link rel='canonical' href='http://pousadajardimdosanjos.com/' />
 <link rel='shortlink' href='http://pousadajardimdosanjos.com/' />
 <style type="text/css" media="screen">body.myatu_bgm_body { background-image: none !important;background-color: #596da0 !important; } #page
@@ -72,7 +72,7 @@ var myatu_bgm = {"current_background":{"id":30,"url":"http:\/\/pousadajardimdosa
 }</style>
 	<style type="text/css" id="twentythirteen-header-css">
 			.site-header {
-			background: url(http://pousadajardimdosanjos.com/wp-content/uploads/2014/02/entree_pousada_banner_5.jpg) no-repeat scroll top;
+			background: url(/img/entree_pousada_banner_5.jpg) no-repeat scroll top;
 			background-size: 1600px auto;
 		}
 		@media (max-width: 767px) {
@@ -99,8 +99,8 @@ var myatu_bgm = {"current_background":{"id":30,"url":"http:\/\/pousadajardimdosa
 
 	<div id="page" class="hfeed site">
 		<header id="masthead" class="site-header" role="banner">
-			<a class="home-link" href="http://pousadajardimdosanjos.com/" title="Pousada Jardim dos Anjos" rel="home">
-				<!-- <h1 class="site-title">Pousada Jardim dos Anjos</h1> -->
+			<a class="home-link" href="/" title="Pousada Jardim dos Anjos" rel="home">
+				<h1 class="site-title">Pousada Jardim dos Anjos</h1>
 				<h1 class="site-title">Pousada <i>Jardim dos Anjos</i></h1>
 				<!-- <h2 class="site-description"></h2> -->
 				<h2 class="site-description">Uma caminhada de 8 minutos de La Casa de Dom Inácio</h2>
@@ -115,15 +115,3 @@ var myatu_bgm = {"current_background":{"id":30,"url":"http:\/\/pousadajardimdosa
 
 	<div id="primary" class="content-area">
 		<div id="content" class="site-content" role="main">
-
-
-
-
-
-
-
-
-
-
-
-
