--- a/themes/pjda/layouts/_default/single.html
+++ b/themes/pjda/layouts/_default/single.html
@@ -1,15 +1,16 @@
 {{ partial "header.html" . }}
 
-<section id="secarticles" class="transparent-bg" style="margin-top:120px">
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-12 col-md-8 col-md-offset-2">
-				<h1>{{ .Title | safeHTML }}<br/><i class="fa fa-angle-down"></i></h1>
-				{{ .Content }}
-			</div>
+<article class="post-8 page type-page status-publish hentry">
+	<header class="entry-header">
+		<h1 class="entry-title">{{ .Title | safeHTML }}</h1>
+	</header><!-- .entry-header -->
+	<div class="entry-content">
+		{{ partial "adresse.html" . }}
+		<div id="{{ .Params.lang }}" lang="{{ .Params.lang }}">
+		{{ .Content }}
 		</div>
-	</div><!--/.container-->
-</section><!--/#feature-->
+	</div>
+</article>
 
 {{ partial "footer.html" . }}
 
