--- a/themes/pjda/layouts/partials/footer.html
+++ b/themes/pjda/layouts/partials/footer.html
@@ -21,9 +21,9 @@
     /*]]>*/
     </script><noscript><img id="myatu_bgm_top" class="myatu_bgm_fs" src="/img/logo_pousada_landscape.jpg" alt="" style="-moz-opacity:.77; filter:alpha(opacity=77); opacity:.77;"  /></noscript></div>
 <!-- Background Manager End -->
-<link rel='stylesheet' id='metaslider-coin-slider-css'  href='http://pousadajardimdosanjos.com/wp-content/plugins/ml-slider/assets/sliders/coinslider/coin-slider-styles.css?ver=3.3.4.1' type='text/css' media='all' property='stylesheet' />
-<link rel='stylesheet' id='metaslider-public-css'  href='http://pousadajardimdosanjos.com/wp-content/plugins/ml-slider/assets/metaslider/public.css?ver=3.3.4.1' type='text/css' media='all' property='stylesheet' />
-<script type='text/javascript' src='http://pousadajardimdosanjos.com/wp-content/themes/twentythirteen/js/functions.js?ver=20150330'></script>
-<script type='text/javascript' src='http://pousadajardimdosanjos.com/wp-content/plugins/ml-slider/assets/sliders/coinslider/coin-slider.min.js?ver=3.3.4.1'></script>
+<link rel='stylesheet' id='metaslider-coin-slider-css'  href='/css/coin-slider-styles.css' type='text/css' media='all' property='stylesheet' />
+<link rel='stylesheet' id='metaslider-public-css'  href='/css/public.css' type='text/css' media='all' property='stylesheet' />
+<script type='text/javascript' src='/js/functions.js'></script>
+<script type='text/javascript' src='/js/coin-slider.min.js'></script>
 </body>
 </html>
