--- a/themes/pjda/layouts/partials/header.html
+++ b/themes/pjda/layouts/partials/header.html
@@ -13,7 +13,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width" />
 	<title>Pousada Jardim dos Anjos</title>
-	<!-- <link rel="shortcut icon" href="favicon.ico" /> -->
+	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
 	<meta name="keywords" content="Abadiania, Casa de Dom Inacio, John of God, João de Deus, pousada" />
 	<meta name="description" content="We welcome you to Pousada Jardim dos Anjos in Abadiania, Goias, Brazil, a comfortable place of stay when you come to see John of God" />
 	<link href='http://fonts.googleapis.com/css?family=Quintessential' rel='stylesheet' type='text/css' />
