--- a/themes/pjda/layouts/partials/header.html
+++ b/themes/pjda/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--[if IE 7]>
+{{ `<!--[if IE 7]>
 <html class="ie ie7" lang="fr-FR">
 <![endif]-->
 <!--[if IE 8]>
@@ -7,8 +7,9 @@
 <![endif]-->
 <!--[if !(IE 7) | !(IE 8)  ]><!-->
 <!-- <html lang="fr-FR"> -->
-<html xmlns="http://www.w3.org/1999/xhtml">
-<!--<![endif]-->
+<html lang="fr-FR">
+<!--<![endif]-->` | safeHTML }}
+
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width" />
