--- a/themes/pjda/layouts/partials/header.html
+++ b/themes/pjda/layouts/partials/header.html
@@ -19,7 +19,7 @@
 	<meta name="description" content="We welcome you to Pousada Jardim dos Anjos in Abadiania, Goias, Brazil, a comfortable place of stay when you come to see John of God" />
 	<link href='http://fonts.googleapis.com/css?family=Quintessential' rel='stylesheet' type='text/css' />
 		<script type="text/javascript">
-			window._wpemojiSettings = {"baseUrl":"http:\/\/s.w.org\/images\/core\/emoji\/72x72\/","ext":".png","source":{"concatemoji":"http:\/\/pousadajardimdosanjos.com\/wp-includes\/js\/wp-emoji-release.min.js?ver=4.3.2"}};
+			window._wpemojiSettings = {"baseUrl":"http:\/\/s.w.org\/images\/core\/emoji\/72x72\/","ext":".png","source":{"concatemoji":"http:\/\/pousadajardimdosanjos.com\/js\/wp-emoji-release.min.js?ver=4.3.2"}};
 			!function(a,b,c){function d(a){var c=b.createElement("canvas"),d=c.getContext&&c.getContext("2d");return d&&d.fillText?(d.textBaseline="top",d.font="600 32px Arial","flag"===a?(d.fillText(String.fromCharCode(55356,56812,55356,56807),0,0),c.toDataURL().length>3e3):(d.fillText(String.fromCharCode(55357,56835),0,0),0!==d.getImageData(16,16,1,1).data[0])):!1}function e(a){var c=b.createElement("script");c.src=a,c.type="text/javascript",b.getElementsByTagName("head")[0].appendChild(c)}var f,g;c.supports={simple:d("simple"),flag:d("flag")},c.DOMReady=!1,c.readyCallback=function(){c.DOMReady=!0},c.supports.simple&&c.supports.flag||(g=function(){c.readyCallback()},b.addEventListener?(b.addEventListener("DOMContentLoaded",g,!1),a.addEventListener("load",g,!1)):(a.attachEvent("onload",g),b.attachEvent("onreadystatechange",function(){"complete"===b.readyState&&c.readyCallback()})),f=c.source||{},f.concatemoji?e(f.concatemoji):f.wpemoji&&f.twemoji&&(e(f.twemoji),e(f.wpemoji)))}(window,document,window._wpemojiSettings);
 		</script>
 		<style type="text/css">
@@ -40,7 +40,6 @@ img.emoji {
 <link rel='stylesheet' id='genericons-css'  href='/css/genericons.css' type='text/css' media='all' />
 <link rel='stylesheet' id='twentythirteen-style-css'  href='/css/style.css' type='text/css' media='all' />
 <link rel='stylesheet' id='background-manager-pub-css'  href='/css/pub.css' type='text/css' media='all' />
-<script type="text/javascript">/* <![CDATA[ */window.background_manager_ajax={"url":"http:\/\/pousadajardimdosanjos.com\/wp-admin\/admin-ajax.php","action":"background-manager"};/* ]]> */</script>
 <script type='text/javascript' src='/js/jquery-1.11.3.min.js'></script>
 <script type='text/javascript' src='/js/jquery-migrate.min.js'></script>
 <script type='text/javascript'>
