--- a/themes/pjda/layouts/shortcodes/links.html
+++ b/themes/pjda/layouts/shortcodes/links.html
@@ -1,8 +1,27 @@
-<p>Diego &amp; Sonia, Abadiania infos : <a href="http://www.abadianiaportal.com" target="_blank">www.abadianiaportal.com</a></p>
-<p>Deb Court, Abadiania infos : <a href="http://www.friendsofthecasa.info" target="_blank">www.friendsofthecasa.info</a></p>
-<p>Barbara Brodsky, Casa guide : <a href="http://www.vipassanahealing.com/" target="_blank">www.vipassanahealing.com</a></p>
-<p>Deb Court, Casa guide : <a href="http://www.guidetojohnofgod.com" target="_blank">www.guidetojohnofgod.com</a></p>
-<p>Amy and Markus Koch — Guides for John of God : <a href="http://www.guidesforjohnofgod.com/" target="_blank">www.guidesforjohnofgod.com</a></p>
-<p>Hayette Weidmann, Casa guide : <a href="http://pontsdelumiere.com" target="_blank">pontsdelumiere.com</a></p>
-<p>Pavel Antonov, Photographe : <a href="http://www.pavelantonov.com" target="_blank">www.pavelantonov.com</a></p>
-<p>Dominique Guillaume, Photographe : <a href="http://www.phototheque-bretagne.com/" target="_blank">www.phototheque-bretagne.com/</a></p>
+<div class="liens">
+
+<p>Diego &amp; Sonia, Abadiania infos<br />
+<a target="_blank" href="http://www.abadianiaportal.com">www.abadianiaportal.com</a></p>
+
+<p>Deb Court, Abadiania infos<br />
+<a target="_blank" href="http://www.friendsofthecasa.info">www.friendsofthecasa.info</a></p>
+
+<p>Barbara Brodsky, Casa guide<br />
+<a target="_blank" href="http://www.vipassanahealing.com/">www.vipassanahealing.com</a></p>
+
+<p>Deb Court, Casa guide<br />
+<a target="_blank" href="http://www.guidetojohnofgod.com">www.guidetojohnofgod.com</a></p>
+
+<p>Amy and Markus Koch — Guides for John of God<br />
+<a target="_blank" href="http://www.guidesforjohnofgod.com/">www.guidesforjohnofgod.com</a></p>
+
+<p>Hayette Weidmann, Casa guide<br />
+<a target="_blank" href="http://pontsdelumiere.com">pontsdelumiere.com</a></p>
+
+<p>Pavel Antonov, Photographe<br />
+<a target="_blank" href="http://www.pavelantonov.com">www.pavelantonov.com</a></p>
+
+<p>Dominique Guillaume, Photographe<br />
+<a target="_blank" href="http://www.phototheque-bretagne.com/">www.phototheque-bretagne.com</a></p>
+
+</div>
